--- a/helm/db-archive/values.yaml
+++ b/helm/db-archive/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 image:
-  registry: 020441188643.dkr.ecr.eu-central-1.amazonaws.com
-  repository: infrastructure/db-archive
+  registry: ghcr.io
+  repository: yasn77/db-archive
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag:
